--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
         {
             "name": "Garrett Whitehorn",
             "homepage": "http://garrettw.net/",
-            "role": "Developer"
+            "role": "Lead Developer"
         }
     ],
     "require": {
         "php": ">=5.6.0"
     },
     "require-dev": {
-        "behat/behat": "^3.1.0",
-        "phpdocumentor/phpdocumentor": "^2.9.0",
-        "phpspec/phpspec": "^3.1.0",
+        "behat/behat": "^3.1",
+        "friendsofphp/php-cs-fixer": "^1.12.1",
+        "phpdocumentor/phpdocumentor": "^2.9",
+        "phpspec/phpspec": "^3.1",
     },
     "autoload": {
         "psr-4": {
