--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "behat/behat": "^3.2",
         "friendsofphp/php-cs-fixer": "^1.12.1",
         "phpdocumentor/phpdocumentor": "^2.9",
-        "phpspec/phpspec": "^3.1",
+        "phpspec/phpspec": "^3.1"
     },
     "autoload": {
         "psr-4": {
