--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "garrettw/aspire",
     "description": "Aspire is a general-purpose PHP app framework.",
     "type": "project",
-    "keywords": ["php", "framework", "adr", "oop", "bdd", "modular", "opinionated"],
+    "keywords": ["php", "framework", "adr", "mvvm", "oop", "bdd", "modular", "opinionated"],
     "homepage": "https://github.com/garrettw/aspire",
     "license": "MIT",
     "authors": [
