--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "crysalead/router": "^3.0",
+        "Level-2/Maphper": "@dev",
+        "Level-2/Transphporm": "^1.1"
     },
     "require-dev": {
         "behat/behat": "^3.2",
